syntax = "proto3";

import "google/protobuf/empty.proto";

message ListFiles {
    repeated string archivos = 1;
}

message File {
    string archivo = 1;
}

message FileInfo {
    string Nombre = 1;
    string linkDescarga = 2;
}

service FileService {
    
    rpc GetFile (File) returns (FileInfo) {};
    rpc AddFile (ListFiles) returns (google.protobuf.Empty) {};
}